# ai-gfx-dev

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  copilot-setup-steps.yml
c/Users/runneradmin/.config/jgit/: config
shaders/: checkerboard_compute.hlsl  simple_compute.hlsl
src/: dxc_locator.rs  graph_config.rs  main.rs
