[package]
name = "ai-gfx-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
hassle-rs = "0.12.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Security", "Win32_System_Threading"] }

[build-dependencies]
hassle-rs = "0.12.0"
